public class LigneCommande
{
    public int IdProduit { get; set; }
    public int IdCommande { get; set; }
    public int Quantite { get; set; }
}