@startuml
class Client <<entity>> {
    - idClient: int
    - civilite: str(10)
    - nom: str(100)
    - prenom: str(100)
    - adresse: str(255)
    - ville: str(150)
    - cp: str(8)
    - mail: str(255)
    - tel: str(15)
}

class ClientManager <<repository>> {
    - createClient()
    - readClient()
    - updateClient()
    - deleteClient()
}

class Commande <<entity>> {
    - idCommande: int
    - date: date
    - idClient: int
    - estPayee: tinyint(1)
    - estExpediee: tinyint(1)
}

class CommandeManager <<repository>> {
    - createCommand()
    - readCommand()
    - updateCommand()
    - deleteCommand()
}

class LigneCommande <<entity>> {
    - idProduit: int
    - idCommande: int
    - quantite: int
}

class Produit <<entity>> {
    - idProduit: int
    - designation: str
    - description: str
    - dateAjout: datetime
    - quantite: int
    - prix: decimal(6.2)
    - fichierImage: str(255)
    - pk_fournisseur: int
}

class ProduitManager <<repository>> {
    - createProduct()
    - readProduct()
    - updateProduct()
    - deleteProduct()
}

Client "1  " <-- "0..*  " Commande
Commande "1  " -- "1..*  " LigneCommande
LigneCommande "0..*  " -- "1..*  " Produit

ClientManager "1..*" .> Client
CommandeManager "1..*" .> Commande
ProduitManager "1..*" .> Produit

@enduml